--- a/templates/jobs/remove-indexes.yaml
+++ b/templates/jobs/remove-indexes.yaml
@@ -3,7 +3,7 @@ kind: Job
 metadata:
   name: remove-indexes
   annotations:
-    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook": pre-upgrade
     "helm.sh/hook-weight": "-1"
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
 spec:
