Add ELK_PORT as env

--- a/templates/jobs/remove-indexes.yaml
+++ b/templates/jobs/remove-indexes.yaml
@@ -21,6 +21,11 @@ spec:
                 configMapKeyRef:
                   name: docspace
                   key: ELK_HOST
+            - name: ELK_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: docspace
+                  key: ELK_PORT
             - name: mysqlPassword
               valueFrom:
                 secretKeyRef:
