--- a/templates/configmaps/remove-indexes.yaml
+++ b/templates/configmaps/remove-indexes.yaml
@@ -11,7 +11,7 @@ data:
     #!/bin/bash
 
     apt update && apt-get install -y curl jq
-    response=$(curl -s http://$ELK_HOST:{{ .Values.connections.elkPort }})
+    response=$(curl -s http://$ELK_HOST:$ELK_PORT
     name=$(echo $response | jq -r ".name")
     if [[ "$name" = "elasticsearch-0" ]] && [[ "$ELK_HOST" = "elasticsearch" ]]; then
       mysql \
