--- a/templates/configmaps/remove-indexes.yaml
+++ b/templates/configmaps/remove-indexes.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: remove-indexes
   annotations:
-    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook": pre-upgrade
     "helm.sh/hook-weight": "-2"
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
 data:
