--- a/templates/jobs/remove-indexes.yaml
+++ b/templates/jobs/remove-indexes.yaml
@@ -26,7 +26,7 @@ spec:
                 configMapKeyRef:
                   name: docspace
                   key: ELK_PORT
-            - name: mysqlPassword
+            - name: MYSQL_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: {{ template "docspace.mysql.secretName" . }}
