--- a/templates/configmaps/elasticsearch-clear-indexes.yaml
+++ b/templates/configmaps/elasticsearch-clear-indexes.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: remove-indexes
+  name: elasticsearch-clear-indexes
   annotations:
     "helm.sh/hook": pre-upgrade
     "helm.sh/hook-weight": "-2"
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
 data:
-  remove-indexes.sh: |
+  elasticsearch-clear-indexes.sh: |
     #!/bin/bash
 
     apt update && apt-get install -y curl jq
