--- a/templates/jobs/elasticsearch-clear-indexes.yaml
+++ b/templates/jobs/elasticsearch-clear-indexes.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: remove-indexes
+  name: elasticsearch-clear-indexes
   annotations:
     "helm.sh/hook": pre-upgrade
     "helm.sh/hook-weight": "-1"
@@ -11,10 +11,10 @@ spec:
   template:
     spec:
       containers:
-        - name: remove-indexes
+        - name: elasticsearch-clear-indexes
           image: mysql:8.0.36-debian
           command: ["/bin/sh", "-c"]
-          args: ["/remove-indexes.sh"]
+          args: ["/elasticsearch-clear-indexes.sh"]
           env:
             - name: ELK_HOST
               valueFrom:
@@ -32,12 +32,12 @@ spec:
                   name: {{ template "docspace.mysql.secretName" . }}
                   key: {{ .Values.connections.mysqlSecretKeyPassword }}
           volumeMounts:
-            - name: remove-indexes
-              mountPath: /remove-indexes.sh
-              subPath: remove-indexes.sh
+            - name: elasticsearch-clear-indexes
+              mountPath: /elasticsearch-clear-indexes.sh
+              subPath: elasticsearch-clear-indexes.sh
       restartPolicy: Never
       volumes:
-        - name: remove-indexes
+        - name: elasticsearch-clear-indexes
           configMap:
-            name: remove-indexes
+            name: elasticsearch-clear-indexes
             defaultMode: 0777
